--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
       <div>REDS’ BURGER STORE （レッズバーガーストア）近鉄四日市駅より徒歩7分。あすなろう四日市駅から224m、定休日： 火曜日</div>
       <a href="https://tabelog.com/mie/A2402/A240201/24011883/">REDS’ BURGER STORE</a>
       <div>-------------------------</div>
-      <div>HAO　中川原駅から744m、定休日：日曜日、月曜日、祝日</div>
-      <a href="https://tabelog.com/mie/A2402/A240201/24008511/dtlmap/">HAO</a>
-      <div>-------------------------</div>
       <div>hana café　近鉄四日市駅徒歩3分。近鉄四日市駅から235m　　定休日：木曜、金曜</div>
       <a href="https://tabelog.com/mie/A2402/A240201/24012291/dtlmap/">hana café</a>>
       <div>+++++++++++++++++++++++++</div>
@@ -34,6 +31,8 @@
       <div>-------------------------</div>
       <div>△ベジキューブ　カフェ　中川原駅から488m　不定休：3月24日は開いている。</div>
       <a href="https://s.tabelog.com/mie/A2402/A240201/24007467/dtlmap">ベジキューブ　カフェ</a>
+      <div>△HAO　中川原駅から744m、定休日：日曜日、月曜日、祝日</div>
+      <a href="https://tabelog.com/mie/A2402/A240201/24008511/dtlmap/">HAO</a>
       <div>+++++++++++++++++++++++++</div>
       <div>+++++++++++++++++++++++++</div>
       <div>✕カフェ ヌフ　水曜日定休日</div>
